force-app/main/default/objects/Registration__c/fields/Online_Account__c.field-meta.xml
<CustomField>
    <fullName>Online_Account__c</fullName>
    <description>The Online Account (PE Account/Banner Account are most likely) for this registration.</description>
    <inlineHelpText>The Online Account (PE Account/Banner Account are most likely) for this registration.</inlineHelpText>
    <label>Online Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>