force-app/main/default/objects/Registration__c/fields/Registration_Id__c.field-meta.xml
<CustomField>
    <fullName>Registration_Id__c</fullName>
    <description>The numeric Registration Id (comes from Opus currently).</description>
    <externalId>true</externalId>
    <inlineHelpText>The numeric Registration Id (comes from Opus currently).</inlineHelpText>
    <label>Registration Id</label>
    <precision>12</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>