force-app/main/default/objects/Registration__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Short description of the Registration... don&apos;t need to reference all sections or anything. Something like name / top line item.</description>
    <inlineHelpText>Short description of the Registration... don&apos;t need to reference all sections or anything. Something like name / top line item.</inlineHelpText>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>